--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ div#preloader {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("img/logo/preloader.gif") no-repeat center center;
+  background: #fff url("/img/logo/preloader.gif") no-repeat center center;
 }
 
 ::-moz-selection {
@@ -1685,7 +1685,7 @@ span.dolar {
 /*  15. Footer Area
 /*----------------------------------------*/
 .footer-1 {
-  background: url(img/background/f1.jpg);
+  /* background: url("/img/background/bg1.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom center;
