--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,46 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+.section .container p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-family: Roboto, sans-serif;
+  font-size: 1.675rem;
+  line-height: 1.6;
+  font-weight: 100;
+}
+
+.section .container h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 1.875rem;
+  margin-bottom: 1.875rem;
+  padding-bottom: 1.875rem;
+  position: relative;
+  font-family: Montserrat, sans-serif;
+  font-weight: 800;
+  color: #333;
+}
+.h2:before,
+h2:before {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #007db7;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
 .slidecontainer,
 .slider {
   width: 100%;
@@ -535,6 +578,12 @@ html.website-revamp .section.testimonials p {
   font-weight: 300;
   text-align: center;
 }
+
+.section .sub-heading {
+  font-size: 1.8rem;
+  font-weight: 100;
+}
+
 @media (max-width: 768px) {
   html.website-revamp .section.ceo-and-quotation,
   html.website-revamp .section.our-price,
